# pyminio

./: .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  minio.py  minio_test_class.py  pyproject.toml  setup.py  tests.py
.github/workflows/: integration.yml  python-publish.yml
pyminio/: __init__.py  exceptions.py  main.py  pyminio_test_class.py  structures.py
pyminio/tests/: tests.py
tests/: test_pyminio.py  tests.py  utils.py
