[tool.poetry]
name = "pyminio"
version = "0.3.1"
description = "Python client for Minio"
authors = ["Michael Tugendhaft <tugmica@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
minio = ">=7.2.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
types-requests = "^2.32.0.20240712"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
atomic = true
